force-app/main/default/objects/Expense__c/fields/Finance_Department_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Finance_Department_Expenses__c</fullName>
    <label>Finance Department Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>