force-app/main/default/objects/Expense__c/fields/HR_Department_Expenses__c.field-meta.xml
<CustomField>
    <fullName>HR_Department_Expenses__c</fullName>
    <label>HR Department Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>