force-app/main/default/objects/Expense__c/fields/Pen_Cust_Name__c.field-meta.xml
<CustomField>
    <fullName>Pen_Cust_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pen Cust Name</label>
    <referenceTo>Pen__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>