force-app/main/default/objects/Expense__c/fields/Type_Of_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Expenses__c</fullName>
    <label>Type Of Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Service Tax</fullName>
            </value>
            <value>
                <fullName>Domestic Travel Expenses</fullName>
            </value>
            <value>
                <fullName>International Travel Expenses</fullName>
            </value>
            <value>
                <fullName>New joinees hiring Expenses</fullName>
            </value>
            <value>
                <fullName>Team Outing Expenses</fullName>
            </value>
            <value>
                <fullName>Monthly Activity Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>