force-app/main/default/objects/Expense__c/fields/User_Name_is_already_existed__c.field-meta.xml
<CustomField>
    <fullName>User_Name_is_already_existed__c</fullName>
    <label>User Name is already existed</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>