force-app/main/default/objects/Expense__c/recordTypes/RT_For_Finance_Dept.recordType-meta.xml
<RecordType>
    <fullName>RT_For_Finance_Dept</fullName>
    <active>true</active>
    <description>Record Type For Finance Department</description>
    <label>RT For Finance Dept</label>
</RecordType>