force-app/main/default/objects/Expense__c/recordTypes/RT_For_HR_Dept.recordType-meta.xml
<RecordType>
    <fullName>RT_For_HR_Dept</fullName>
    <active>true</active>
    <description>Record Type For HR Department</description>
    <label>RT For HR Dept</label>
</RecordType>